--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Test
         run: |
           source /opt/intel/oneapi/setvars.sh
-          ./scripts/test/test.sh /opt/intel/oneapi
+          ./test/test.sh /opt/intel/oneapi
   test_windows:
     name: Test (Windows)
     runs-on: windows-latest
@@ -39,6 +39,6 @@ jobs:
         shell: cmd
         run: |
           call "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-          powershell -command "./scripts/test/test.ps1 'C:\Program Files (x86)\Intel\oneAPI'"
+          powershell -command "./test/test.ps1 'C:\Program Files (x86)\Intel\oneAPI'"
         env:
           VS_VER: vs2022
