--- a/action.yml
+++ b/action.yml
@@ -53,20 +53,20 @@ runs:
     - name: Set HPC kit environment variables
       shell: bash
       run: |
-        echo "setting toolkit variables"
+        echo "setting HPC toolkit variables"
+        version="2022.3.0"
         if [ "$RUNNER_OS" == "Linux" ]; then
-          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18679/l_HPCKit_p_2022.2.0.191_offline.sh" >> $GITHUB_ENV
+          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18856/l_HPCKit_p_$version.8751_offline.sh" >> $GITHUB_ENV
           echo "INTEL_HPCKIT_COMPONENTS=intel.oneapi.lin.ifort-compiler" >> $GITHUB_ENV
         elif [ "$RUNNER_OS" == "macOS" ]; then
-          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/IRC_NAS/18681/m_HPCKit_p_2022.2.0.158_offline.dmg" >> $GITHUB_ENV
+          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18866/m_HPCKit_p_$version.8685_offline.dmg" >> $GITHUB_ENV
           echo "INTEL_HPCKIT_COMPONENTS=intel.oneapi.mac.ifort-compiler" >> $GITHUB_ENV
         else
-          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/IRC_NAS/18680/w_HPCKit_p_2022.2.0.173_offline.exe" >> $GITHUB_ENV
+          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18857/w_HPCKit_p_$version.9564_offline.exe" >> $GITHUB_ENV
           echo "INTEL_HPCKIT_COMPONENTS=intel.oneapi.win.ifort-compiler" >> $GITHUB_ENV
         fi
  
-        version="2022.3"
-        echo "using toolkit version $version"
+        echo "using HPC toolkit version $version"
         echo "INTEL_HPCKIT_VERSION=$version" >> $GITHUB_ENV
         
     - name: Hide GNU tar
@@ -172,7 +172,7 @@ runs:
         echo configuring oneAPI environment
         call "%INTEL_HPCKIT_INSTALL_PATH%\setvars-vcvarsall.bat"
         :: this script fails when install location is not the default
-        call "%INTEL_HPCKIT_INSTALL_PATH%\compiler\2022.1.0\env\vars.bat"
+        call "%INTEL_HPCKIT_INSTALL_PATH%\compiler\latest\env\vars.bat"
         
         echo persisting oneAPI environment
         set | findstr /c:"oneAPI" >> "%GITHUB_ENV%"
