--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -173,7 +173,7 @@ jobs:
         uses: ./
         with:
           path: ${{ runner.os != 'Windows' && 'bin' || 'C:\Program Files (x86)\Intel\oneAPI' }}
-          setvars: false
+          # setvars: false
 
       - name: Download examples
         working-directory: pymake
