--- a/action.yml
+++ b/action.yml
@@ -179,23 +179,23 @@ runs:
     #   if: runner.os == 'Windows'
     #   uses: microsoft/setup-msbuild@v1.1
 
-    - name: Find VS versions
-      id: find-vcvars
-      if: runner.os == 'Windows'
-      shell: pwsh
-      run: |
-        $products = 'Community','Professional','Enterprise','BuildTools' | %{ "Microsoft.VisualStudio.Product.$_" }
-        $vswhere = Get-Command 'vswhere'
-        $vs = & $vswhere.Path -products $products -latest -format json | ConvertFrom-Json
-        $script = Join-Path $vs.installationPath 'BuildTools' 'VC' 'Auxiliary' 'Build' 'vcvars64.bat'
-        echo "vcvars_script=$script" >> $GITHUB_OUTPUT
+    # - name: Find VS versions
+    #   id: find-vcvars
+    #   if: runner.os == 'Windows'
+    #   shell: pwsh
+    #   run: |
+    #     $products = 'Community','Professional','Enterprise','BuildTools' | %{ "Microsoft.VisualStudio.Product.$_" }
+    #     $vswhere = Get-Command 'vswhere'
+    #     $vs = & $vswhere.Path -products $products -latest -format json | ConvertFrom-Json
+    #     $script = Join-Path $vs.installationPath 'BuildTools' 'VC' 'Auxiliary' 'Build' 'vcvars64.bat'
+    #     echo "vcvars_script=$script" >> $GITHUB_OUTPUT
 
-    - name: Run vcvars script (Windows)
-      if: runner.os == 'Windows'
-      shell: cmd
-      run: |
-        call ${{ steps.find-vcvars.outputs.vcvars_script }}
-        :: call "%INTEL_HPCKIT_INSTALL_PATH%\setvars-vcvarsall.bat"
+    # - name: Run vcvars script (Windows)
+    #   if: runner.os == 'Windows'
+    #   shell: cmd
+    #   run: |
+    #     call ${{ steps.find-vcvars.outputs.vcvars_script }}
+    #     :: call "%INTEL_HPCKIT_INSTALL_PATH%\setvars-vcvarsall.bat"
 
     - name: Run setvars script (Windows)
       if: runner.os == 'Windows' && inputs.setvars == 'true'
@@ -205,7 +205,7 @@ runs:
         :: this script fails when install location is not the default
         call "%INTEL_HPCKIT_INSTALL_PATH%\compiler\%LATEST%\env\vars.bat"
         set | findstr /c:"oneAPI" >> "%GITHUB_ENV%"
-        echo SETVARS_COMPLETED=1>>"%GITHUB_ENV%"
+        echo SETVARS_COMPLETED="1">>"%GITHUB_ENV%"
 
     # GitHub Actions prepends GNU linker to the PATH before all bash steps, hide it so MSVC linker is found
     - name: Hide GNU linker (Windows)
