--- a/action.yml
+++ b/action.yml
@@ -101,13 +101,6 @@ runs:
         os=$(echo $RUNNER_OS | tr '[:upper:]' '[:lower:]')
         "${{ github.action_path }}/scripts/install_$os.sh" "${{ env.INTEL_HPCKIT_INSTALL_PATH }}" "${{ env.INTEL_HPCKIT_INSTALLER_URL }}" "${{ env.INTEL_HPCKIT_COMPONENTS }}"
 
-    - name: Install compilers (Windows)
-      if: runner.os == 'Windows' && steps.cache-ifort.outputs.cache-hit != 'true'
-      shell: cmd
-      run: |
-        echo downloading and running HPC kit installer
-        call "%GITHUB_ACTION_PATH%\scripts\install_windows.bat" "${{ env.INTEL_HPCKIT_INSTALL_PATH }}" "${{ env.INTEL_HPCKIT_INSTALLER_URL }}" "${{ env.INTEL_HPCKIT_COMPONENTS }}"
-
     - name: Install MKL (Windows)
       if: runner.os == 'Windows' && steps.cache-ifort.outputs.cache-hit != 'true'
       shell: cmd
@@ -117,7 +110,25 @@ runs:
       run: |
         echo downloading and running MKL installer
         call "%GITHUB_ACTION_PATH%\scripts\install_windows.bat" "${{ env.INTEL_MKL_INSTALL_PATH }}" "${{ env.INTEL_MKL_INSTALLER_URL }}"
+
+        :: list subdirs of the install directory
         dir "${{ env.INTEL_MKL_INSTALL_PATH }}"
+
+        :: remove everything except mkl subdirectory
+        rmdir /s /q "${{ env.INTEL_MKL_INSTALL_PATH }}\compiler"
+        rmdir /s /q "${{ env.INTEL_MKL_INSTALL_PATH }}\conda_channel"
+        rmdir /s /q "${{ env.INTEL_MKL_INSTALL_PATH }}\Installer"
+        rmdir /s /q "${{ env.INTEL_MKL_INSTALL_PATH }}\licensing"
+        rmdir /s /q "${{ env.INTEL_MKL_INSTALL_PATH }}\logs"
+        del /q "${{ env.INTEL_MKL_INSTALL_PATH }}\*.bat"
+        del /q "${{ env.INTEL_MKL_INSTALL_PATH }}\*.txt"
+
+    - name: Install compilers (Windows)
+      if: runner.os == 'Windows' && steps.cache-ifort.outputs.cache-hit != 'true'
+      shell: cmd
+      run: |
+        echo downloading and running HPC kit installer
+        call "%GITHUB_ACTION_PATH%\scripts\install_windows.bat" "${{ env.INTEL_HPCKIT_INSTALL_PATH }}" "${{ env.INTEL_HPCKIT_INSTALLER_URL }}" "${{ env.INTEL_HPCKIT_COMPONENTS }}"
 
     - name: Save cache
       if: inputs.cache == 'true' && steps.cache-ifort.outputs.cache-hit != 'true'
