--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ ubuntu-18.04, ubuntu-20.04, ubuntu-22.04, macos-11, macos-12, windows-2019, windows-2022 ]
-        path: [ absolute, relative, tilde, default ]
-        setvars: [ 'true', 'false' ]
+        # os: [ ubuntu-18.04, ubuntu-20.04, ubuntu-22.04, macos-11, macos-12, windows-2019, windows-2022 ]
+        # path: [ absolute, relative, tilde, default ]
+        # setvars: [ 'true', 'false' ]
+        include:
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/IRC_NAS/2a13d966-fcc5-4a66-9fcc-50603820e0c9/w_HPCKit_p_2023.1.0.46357_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/19085/w_HPCKit_p_2023.0.0.25931_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/18976/w_HPCKit_p_2022.3.1.19755_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/18857/w_HPCKit_p_2022.3.0.9564_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/IRC_NAS/18680/w_HPCKit_p_2022.2.0.173_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/18578/w_HPCKit_p_2022.1.3.145_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/18529/w_HPCKit_p_2022.1.2.116_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/18417/w_HPCKit_p_2022.1.0.93_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/18247/w_HPCKit_p_2021.4.0.3340_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/17940/w_HPCKit_p_2021.3.0.3227_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/17762/w_HPCKit_p_2021.2.0.2901_offline.exe'}
+          - {os: windows-2022, path: default, setvars: true, windows_url: 'https://registrationcenter-download.intel.com/akdlm/irc_nas/17392/w_HPCKit_p_2021.1.0.2682_offline.exe'}
     steps:
 
       - name: Checkout
@@ -73,30 +86,31 @@ jobs:
         uses: ./
         with:
           setvars: ${{ matrix.setvars }}
+          windows_url: ${{ matrix.windows_url }}
 
-      - name: Set environment variables
-        if: runner.os != 'Windows' && matrix.setvars != 'true'
-        shell: bash
-        run: |
-          source "$INTEL_HPCKIT_INSTALL_PATH/setvars.sh"
-          env | grep oneapi >> $GITHUB_ENV
+      # - name: Set environment variables
+      #   if: runner.os != 'Windows' && matrix.setvars != 'true'
+      #   shell: bash
+      #   run: |
+      #     source "$INTEL_HPCKIT_INSTALL_PATH/setvars.sh"
+      #     env | grep oneapi >> $GITHUB_ENV
 
-      - name: Set environment variables
-        if: runner.os == 'Windows' && matrix.setvars != 'true'
-        shell: cmd
-        run: |
-          call "%INTEL_HPCKIT_INSTALL_PATH%\compiler\%INTEL_COMPILER_VERSION%\env\vars.bat"
-          set | findstr /c:"oneAPI" >> "%GITHUB_ENV%"
+      # - name: Set environment variables
+      #   if: runner.os == 'Windows' && matrix.setvars != 'true'
+      #   shell: cmd
+      #   run: |
+      #     call "%INTEL_HPCKIT_INSTALL_PATH%\compiler\%INTEL_COMPILER_VERSION%\env\vars.bat"
+      #     set | findstr /c:"oneAPI" >> "%GITHUB_ENV%"
 
-      # not needed atm, but just in case any future tests require this
-      - name: Set SETVARS_COMPLETED
-        if: matrix.setvars != 'true'
-        shell: bash
-        run: echo "SETVARS_COMPLETED=1" >> $GITHUB_ENV
+      # # not needed atm, but just in case any future tests require this
+      # - name: Set SETVARS_COMPLETED
+      #   if: matrix.setvars != 'true'
+      #   shell: bash
+      #   run: echo "SETVARS_COMPLETED=1" >> $GITHUB_ENV
 
-      - name: Test compilers (Linux & Mac)
-        if: runner.os != 'Windows'
-        run: ./test/test.sh ${{ env.TEST_BINDIR }}
+      # - name: Test compilers (Linux & Mac)
+      #   if: runner.os != 'Windows'
+      #   run: ./test/test.sh ${{ env.TEST_BINDIR }}
 
       - name: Test compilers (Windows bash)
         if: runner.os == 'Windows'
