--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,10 @@ inputs:
     description: Whether to cache the installation
     required: false
     default: 'true'
+  windows_url:
+    description: Windows HPC kit installer URL
+    required: false
+    default: 'https://registrationcenter-download.intel.com/akdlm/IRC_NAS/2a13d966-fcc5-4a66-9fcc-50603820e0c9/w_HPCKit_p_2023.1.0.46357.exe'
 outputs:
   cache-hit:
     description: Whether the installation was restored from cache
@@ -52,20 +56,28 @@ runs:
       shell: bash
       run: |
         echo "setting HPC kit variables"
-        version="2022.3.0"
+        version=2022.3.0
         if [ "$RUNNER_OS" == "Linux" ]; then
           echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18856/l_HPCKit_p_$version.8751_offline.sh" >> $GITHUB_ENV
           echo "INTEL_HPCKIT_COMPONENTS=intel.oneapi.lin.dpcpp-cpp-compiler-pro:intel.oneapi.lin.ifort-compiler" >> $GITHUB_ENV
+          echo "using HPC kit version $version"
+          echo "INTEL_HPCKIT_VERSION=$version" >> $GITHUB_ENV
         elif [ "$RUNNER_OS" == "macOS" ]; then
           echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18866/m_HPCKit_p_$version.8685_offline.dmg" >> $GITHUB_ENV
           echo "INTEL_HPCKIT_COMPONENTS=intel.oneapi.mac.cpp-compiler:intel.oneapi.mac.ifort-compiler" >> $GITHUB_ENV
+          echo "using HPC kit version $version"
+          echo "INTEL_HPCKIT_VERSION=$version" >> $GITHUB_ENV
         else
-          echo "INTEL_HPCKIT_INSTALLER_URL=https://registrationcenter-download.intel.com/akdlm/irc_nas/18857/w_HPCKit_p_$version.9564_offline.exe" >> $GITHUB_ENV
+          echo "INTEL_HPCKIT_INSTALLER_URL=${{ inputs.windows_url }}" >> $GITHUB_ENV
           echo "INTEL_HPCKIT_COMPONENTS=intel.oneapi.win.cpp-compiler:intel.oneapi.win.ifort-compiler" >> $GITHUB_ENV
+          url=${{ inputs.windows_url }}
+          version=${url##*p_}
+          version=${version%%_*}
+          echo "using HPC kit version $version"
+          echo "INTEL_HPCKIT_VERSION=$version" >> $GITHUB_ENV
         fi
  
-        echo "using HPC kit version $version"
-        echo "INTEL_HPCKIT_VERSION=$version" >> $GITHUB_ENV
+        
 
     # GNU tar can't handle symlinks on Windows, hide it so default Windows tar is used to restore cache
     - name: Hide GNU tar
